--- a/app/assets/stylesheets/user/common.scss
+++ b/app/assets/stylesheets/user/common.scss
@@ -6,6 +6,8 @@ body {
   font-family: Arial;
   padding: 10px;
   background: #f1f1f1;
+  width: 900px;
+  margin: 0 auto;
 }
 
 /* Header/Blog Title */
